--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": [
     "solid/",
     "outline/",
-    "getIcon.server.js",
+    "getIcon.server.cjs",
     "index.js",
     "index.d.ts",
     "icons.json",
