--- a/package.json
+++ b/package.json
@@ -26,16 +26,26 @@
     "LICENSE",
     "bin/fetch-heroicons.js"
   ],
-  "main": "index.js",
+  "main": "./index.js",
+  "module": "./index.js",
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./index.js"
+    },
+    "./getIcon.server.js": "./getIcon.server.js"
+  },
   "types": "index.d.ts",
   "bin": {
     "heroicons-fetch": "bin/fetch-heroicons.js"
   },
   "scripts": {
-    "prepare": "node bin/fetch-heroicons.js"
+    "fetch-icons": "node fetch-heroicons.js"
   },
   "dependencies": {
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "heroicons-html-cdn": "^1.0.11",
+    "path": "^0.12.7"
   },
   "engines": {
     "node": ">=16"
