export the icons json

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "import": "./index.js",
       "require": "./index.js"
     },
-    "./getIcon.server.js": "./getIcon.server.js"
+    "./getIcon.server.js": "./getIcon.server.js",
+      "./icons.json": "./icons.json" 
   },
   "types": "index.d.ts",
   "bin": {
